# small_projects

./: Cargo.toml  README.md  sync_repo.sh  test.rs
custom_benchmark/: Cargo.toml
custom_benchmark/src/: lib.rs  main.rs  threshold_calc.rs  utils.rs
custom_benchmark/src/sorts/: mod.rs  naked_verus.rs  naked_verus_arc.rs  naked_verus_arc_clone.rs  naked_verus_arc_clone_no_scope.rs  naked_verus_arc_no_scope.rs  naked_verus_no_scope.rs  naked_verus_rayon.rs  slices.rs  slices_blackbox.rs  slices_unchecked.rs  slices_unchecked_vspawn.rs  verus.rs  verus_imposter.rs  verus_no_g_less_arcs.rs  verus_no_g_no_arc.rs  verus_no_ghost.rs  verus_no_ghost_muninit.rs
disjoint_mut_test/: Cargo.toml  mergesort_with_view_types.rs  mergesort_without_view_types.rs  test
disjoint_mut_test/src/: lib.rs  mergesort.rs  mergesort_less_arcs.rs  only_refcell.rs  permissions_array.rs  region_array.rs  sandbox.rs  shell.rs
disjoint_mut_test/src/disjoint_verified/: exec_pcell.rs  exec_v1  exec_v1.ll  exec_v1.mir  exec_v2.rs  mod.rs  non_exec_atom.rs  quantifiers_merge_sort.rs  sandbox.rs  verus_problem.rs
disjoint_mut_test/src/disjoint_verified/split_at/: mod.rs
mergesort_benchmarks/: Cargo.toml  perf.data.old  report.txt  verus_still_slow_backup.rs
mergesort_benchmarks/benches/: merge.rs  parallel_split_at.rs
mergesort_benchmarks/src/: main.rs
mergesort_benchmarks/src/lib/: merge_sorts.rs  mod.rs  test_debug.rs
mergesort_benchmarks/src/lib/merge_sorts/: minimalistic_sorts.rs  mod.rs  parallel_profiled.rs  verus_changed2.rs  verus_changed3.rs  verus_changed4.rs  verus_changed5.rs  verus_without_ghost.rs  verus_without_ghost_changed.rs  verus_without_ghost_profiled.rs
mergesort_showcase/: Cargo.toml
mergesort_showcase/benches/: compare_sorts.rs
mergesort_showcase/src/lib/: mod.rs  single_array_optimized.rs  single_array_sort.rs  slices_sort.rs  slices_unchecked_sort.rs
src/: disjoint_mut.rs  lib.rs
src/disjoint_verified/: atom.rs  exec_v1.rs  exec_v2.rs  mod.rs  non_exec_simple.rs  non_exec_simple_v2.rs  static_rc.rs  test_vec.rs
