[package]
name = "custom_benchmark"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
disjoint_mut_test = { path = "../disjoint_mut_test"}
rand = "0.9.1"
rayon = "1.10.0"
serde = "1.0.219"
serde_json = "1.0.140"

[dev-dependencies]
enum-iterator = "2.1.0"

[profile.release]
debug = true
