[package]
name = "mergesort_showcase"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib/mod.rs"

[dependencies]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.9.1"

[[bench]]
name = "compare_sorts"
harness = false

[profile.bench]
inherits = "release"
debug = true
